--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "joao victor",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.22.0",
     "body-parser": "1.19.0",
     "crypto-js": "4.0.0",
     "express": "4.17.1",
